# arata

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  arata.cabal  arata.conf.example
plugins/: ChanServ.hs  NickServ.hs
plugins/Ext/: Help.hs
plugins/NickServ/: Add.hs  Add.hs.bak  Confirm.hs  Del.hs  Drop.hs  Group.hs  Help.hs  Info.hs  Login.hs  Logout.hs  Nick.hs  Recover.hs  Register.hs  Show.hs  Ungroup.hs
plugins/Protocol/: Charybdis.hs
src/: Align.hs  Arata.hs  Dated.hs  ListBinding.hs  Main.hs
src/Arata/: ChanServ.hs  Config.hs  DB.hs  Helper.hs  Message.hs  NickServ.hs  TS6.hs  Types.hs
src/Arata/NickServ/: Add.hs  Confirm.hs  Del.hs  Drop.hs  Group.hs  Help.hs  Info.hs  Login.hs  Logout.hs  Nick.hs  Recover.hs  Register.hs  Show.hs  Ungroup.hs
src/Arata/Plugin/: Load.hs
src/Arata/Protocol/: Charybdis.hs
src/IRC/: RFC1459.hs
