name:                arata
version:             0.0.1
synopsis:            IRC services
description:         Arata is an IRC services package providing NickServ and ChanServ.
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           (c) 2014-2015 David Farrell
category:            IRC
build-type:          Make
extra-source-files:  README.md
data-files:          arata.conf arata.conf.example
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/shockkolate/arata.git

executable arata
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    LambdaCase, TypeFamilies, DeriveDataTypeable, TemplateHaskell
  build-depends:       base         >= 4.6  && < 5,
                       ConfigFile   >= 1.1  && < 1.2,
                       acid-state   >= 0.12 && < 0.13,
                       mtl          >= 2.1  && < 3,
                       connection   >= 0.2  && < 0.3,
                       time         >= 1.4  && < 2,
                       safecopy     >= 0.7  && < 0.9,
                       ixset        >= 1.0  && < 1.1,
                       transformers >= 0.3  && < 0.4,
                       containers   >= 0.5  && < 0.6,
                       bytestring   >= 0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
